[package]
name = "iced_audio"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iced = { version = "0.13.1", default-features = false, features = ["advanced", "canvas"] }

[dev-dependencies]
iced = { version = "0.13.1", features = ["canvas", "advanced", "wgpu"] }

[[example]]
name = "knob"
required-features = []

