[package]
name = "iced_audio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iced = { version = "0.13.1", default-features = false, features = ["advanced", "canvas"] }

[dev-dependencies]
iced = { version = "0.13.1" }

[[example]]
name = "knob"
required-features = []

[[example]]
name = "xy_pad"
required-features = []

